fix identifier not detecting variables in printblock